--- a/packages/ync-react-cli/package.json
+++ b/packages/ync-react-cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ync-react-cli",
   "author": "yunaichun",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "bin": {
     "ync-react-cli": "bin/index.js"
   },
@@ -30,5 +30,12 @@
     "inquirer": "^7.0.0",
     "mem-fs": "^1.1.3",
     "mem-fs-editor": "^6.0.0"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "ync-common-eslint-config": "^0.0.9"
   }
 }
