--- a/package.json
+++ b/package.json
@@ -1,81 +1,1 @@
-{
-  "_from": "ync-commit-check-cli",
-  "_id": "ync-commit-check-cli@0.0.3",
-  "_inBundle": false,
-  "_integrity": "sha512-75zQkYlTK5GTUAyVi8qGf8Ep2NTxoDjK952DuvYG2be00btQWbSMCSuptVMZCF/Zi0Lz6XZzuM58IXqf/G1OQg==",
-  "_location": "/ync-commit-check-cli",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "tag",
-    "registry": true,
-    "raw": "ync-commit-check-cli",
-    "name": "ync-commit-check-cli",
-    "escapedName": "ync-commit-check-cli",
-    "rawSpec": "",
-    "saveSpec": null,
-    "fetchSpec": "latest"
-  },
-  "_requiredBy": [
-    "#DEV:/",
-    "#USER"
-  ],
-  "_resolved": "https://registry.npmjs.org/ync-commit-check-cli/-/ync-commit-check-cli-0.0.3.tgz",
-  "_shasum": "1cb22de7e27511acc42853b8e825d35dcc5b7fc8",
-  "_spec": "ync-commit-check-cli",
-  "_where": "/Users/yunaichun/Github/REACT/ync-lerna-packages",
-  "author": {
-    "name": "yunaichun"
-  },
-  "bin": {
-    "ync-commit-check": "bin/index.js"
-  },
-  "bugs": {
-    "url": "https://github.com/yunaichun/ync-lerna-packages/issues"
-  },
-  "bundleDependencies": false,
-  "dependencies": {
-    "chalk": "^4.1.1",
-    "commander": "^7.2.0",
-    "cross-spawn": "^7.0.3"
-  },
-  "deprecated": false,
-  "description": "husky, lint-staged, commit msg 代码提交规划检查",
-  "devDependencies": {
-    "@commitlint/cli": "^12.1.1",
-    "@commitlint/config-angular": "^12.1.1",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^6.0.0",
-    "lint-staged": "^10.5.4",
-    "standard-version": "^9.3.0",
-    "ync-common-eslint-config": "0.0.13"
-  },
-  "files": [
-    "lib/*",
-    "bin/*",
-    "src/*"
-  ],
-  "homepage": "https://github.com/yunaichun/ync-lerna-packages#readme",
-  "keywords": [
-    "husky",
-    "hooks",
-    "commitlint",
-    "lint-staged",
-    "standard-version"
-  ],
-  "license": "ISC",
-  "name": "ync-commit-check-cli",
-  "preferGlobal": true,
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/yunaichun/ync-lerna-packages.git"
-  },
-  "scripts": {
-    "link-test": "npm link && ync-eslint-config",
-    "release": "standard-version",
-    "test": "node ./bin/index.js"
-  },
-  "version": "0.0.4"
-}
+{"name":"root","private":true,"devDependencies":{"lerna":"^3.22.1"},"scripts":{"release":"standard-version"}}
