--- a/packages/ync-commit-check-cli/package.json
+++ b/packages/ync-commit-check-cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ync-commit-check-cli",
   "author": "yunaichun",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "bin": {
     "ync-commit-check": "bin/index.js"
   },
@@ -30,16 +30,11 @@
   "preferGlobal": true,
   "license": "ISC",
   "devDependencies": {
+    "husky": "^6.0.0",
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-angular": "^12.1.1",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
-    "standard-version": "^9.3.0",
-    "ync-common-eslint-config": "0.0.13"
+    "standard-version": "^9.3.0"
   },
   "dependencies": {
     "chalk": "^4.1.1",
