--- a/packages/ync-cli-commit-check/package.json
+++ b/packages/ync-cli-commit-check/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ync-cli-commit-check",
   "author": "yunaichun",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "bin": {
     "ync-commit-check": "bin/index.js"
   },
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "link": "npm link ync-cli-commit-check",
-    "test": "node ./bin/index.js"
+    "test": "npx ync-commit-check"
   },
   "preferGlobal": true,
   "license": "ISC",
