--- a/packages/ync-cli-eslint-config/package.json
+++ b/packages/ync-cli-eslint-config/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ync-cli-eslint-config",
   "author": "yunaichun",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "bin": {
     "ync-eslint-config": "bin/index.js"
   },
@@ -22,7 +22,7 @@
     "url": "https://github.com/yunaichun/ync-lerna-packages.git"
   },
   "scripts": {
-    "link": "npm link ync-cli-eslint-config",
+    "link": "npm link",
     "test": "npx ync-eslint-config"
   },
   "preferGlobal": true,
