--- a/package.json
+++ b/package.json
@@ -1,23 +1,1 @@
-{
-  "name": "root",
-  "version": "1.1.0",
-  "private": true,
-  "devDependencies": {
-    "@commitlint/cli": "^12.1.1",
-    "@commitlint/config-angular": "^12.1.1",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^6.0.0",
-    "lerna": "^3.22.1",
-    "lint-staged": "^10.5.4",
-    "standard-version": "^9.3.0",
-    "ync-commit-check-cli": "0.0.6",
-    "ync-common-eslint-config": "0.0.13"
-  },
-  "scripts": {
-    "prepare": "husky install",
-    "release": "standard-version"
-  }
-}
+{"name":"root","version":"1.1.0","private":true,"devDependencies":{"@commitlint/cli":"^12.1.1","@commitlint/config-angular":"^12.1.1","eslint-config-airbnb":"^18.2.1","eslint-plugin-jsx-a11y":"^6.4.1","eslint-plugin-react":"^7.23.2","eslint-plugin-react-hooks":"^4.2.0","husky":"^6.0.0","lerna":"^3.22.1","lint-staged":"^10.5.4","standard-version":"^9.3.0","ync-cli-commit-check":"^0.1.4","ync-cli-eslint-config":"^0.1.2","ync-commit-check-cli":"0.0.6","ync-common-eslint-config":"0.0.13"},"scripts":{"prepare":"husky install","release":"standard-version"}}
