--- a/packages/ync-cli-react-create/lib/package.json
+++ b/packages/ync-cli-react-create/lib/package.json
@@ -4,22 +4,21 @@
   "version": "<%=version%>",
   "description": "<%=description%>",
   "keywords": [
-    <%_
-      keywords.map(function(word, index){
+    <%_keywords.map(function(word, index){
     -%>
     "<%=word%>"<%=(index == (keywords.length - 1) ? '': ',')%>
     <%_
-      })
+    })
     -%>
   ],
   "repository": {
     "type": "git",
-    "url":  "<%=git%>"
+    "url": "<%=git%>"
   },
   "scripts": {
-    "lint": "eslint --ext .js src",
     "test": "jest --coverage",
-    "build": "NODE_ENV=prod webpack"
+    "build": "NODE_ENV=prod webpack",
+    "release": "standard-version && git push --follow-tags origin master && npm publish"
   },
   "main": "dist/index.js",
   "license": "MIT",
@@ -66,6 +65,17 @@
     "style-loader": "^1.1.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9"
+    "webpack-cli": "^3.3.9",
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-angular": "^12.1.1",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^10.5.4",
+    "standard-version": "^9.3.0",
+    "ync-cli-commit-check": "^0.1.9",
+    "ync-cli-eslint-config": "^0.1.2"
   }
 }
